--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<meta name="keywords" content="ambi, rpn, reverse polish notation, polish notation, pn, calculator, programming language, ">
 	<meta name="copyright" content="David Pratten 2009 GPL 3">
 	<meta name="author" content="David Pratten">
+	<meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/> <!-- Mobile Safari -->
 	<script src="ambi.js" type="text/javascript"></script>
 	<script src="jquery-1.3.1.min.js" type="text/javascript"></script>
 	<script src="ambi-interface.js" type="text/javascript"></script>
