--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="ambi.css" />
 </head>
 <body>
-	<h2 id="top">Ambi - an RPN programming language</h2>
+	<h2 id="top">Ambi - an RPN calculator and programming language</h2>
 <p><small><em>Version 0.4.4 2009-01-29 License: GPL3 (C) 2009 David R. Pratten</em>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://code.google.com/p/ambi/">Help</a></small></p>
 	<table><tr><td>
 	<h3>Type expression or program ...</h3><form name="runform">
