--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<h2 id="top">Ambi - an RPN calculator and programming language</h2>
-<p><small><em>Version 0.4.4 2009-01-29 License: GPL3 (C) 2009 David R. Pratten</em>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://code.google.com/p/ambi/">Help</a></small></p>
+<p><small><em>Version 0.5 2010-02-16 License: GPL3 (C) 2009-2010 David R. Pratten</em>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://code.google.com/p/ambi/">Help</a></small></p>
 	<table><tr><td>
 	<h3>Type expression or program ...</h3><form name="runform">
 <textarea id="source" name="source" rows="10"  >1 2 + .</textarea></td><td>
