Change ambi.js interface Vars as an object instead of Array. Changes that enable the unittest.html to share css and ambi.js

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<h2 id="top">Ambi - an RPN calculator and programming language</h2>
 <p><small><em>Version 0.5 2010-02-16 License: GPL3 (C) 2009-2010 David R. Pratten</em>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://code.google.com/p/ambi/">Help</a></small></p>
-	<table><tr><td>
+	<table id="io"><tr><td>
 	<h3>Type expression or program ...</h3><form name="runform">
 <textarea id="source" name="source" rows="10"  >1 2 + .</textarea></td><td>
 <h3> ... then click or tab here to show results</h3><textarea id="result" rows="10"></textarea></form>
