--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="David Pratten">
 	<meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/> <!-- Mobile Safari -->
 	<script src="ambi.js" type="text/javascript"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js" type="text/javascript"></script>
+	<script src="jquery-1.7.min.js" type="text/javascript"></script>
 	<script src="ambi-interface.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="ambi.css" />
 </head>
