--- a/unittest.html
+++ b/unittest.html
@@ -21,7 +21,7 @@
     <script src="json2.js" type="text/javascript">
 </script>
     <script src=
-    "https://ajax.googleapis.com/ajax/libs/jquery/1.7.0/jquery.min.js"
+    "jquery-1.7.min.js"
     type="text/javascript">
 </script>
     <script src="ambi-unittest.js" type="text/javascript">
