Expose the Top Expression Stack along with Results and Vars Update the user interface to show work in progress / stack Update the UI to recalculate on backspace as well as space, . and enter

--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 	<h2 id="top">Ambi - an RPN calculator and programming language</h2>
 <p><small><em>Version 0.6 2011-11-16 License: GPL3 (C) 2009-2010 David R. Pratten</em>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://code.google.com/p/ambi/">Help</a></small></p>
 	<table id="io"><tr><td>
-	<h3>Type expression or function def'ns followed by an expression ...</h3><form name="runform">
+	<h3>Type functions and expression ...</h3><form name="runform">
 <textarea id="source" name="source" rows="10"  >1 2 + .</textarea></td><td>
-<h3>Results</h3><textarea id="result" rows="10"></textarea></form>
+<h3>Work in Progress (the stack)</h3><textarea id="stack" rows="10"></textarea></form>
+	</td><td>
+<h3>Results (use . or ..)</h3><textarea id="result" rows="10"></textarea></form>
 	</td></tr>
 		</table>
 <h2>Variables</h2><p><small><em><a id="clearvars" href="">Clear variables</a></em></small></p><div id="vars"  >
