Reorient the interface to use vertically aligned elements for mobile devices.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="shortcut icon" href="favicon.ico" />
 	<title>Ambi - an RPN programming language</title>
 	<meta name="keywords" content="ambi, rpn, reverse polish notation, polish notation, pn, calculator, programming language, ">
-	<meta name="copyright" content="David Pratten 2009 GPL 3">
+	<meta name="copyright" content="David Pratten 2009-2011 GPL 3">
 	<meta name="author" content="David Pratten">
 	<meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/> <!-- Mobile Safari -->
 	<script src="ambi.js" type="text/javascript"></script>
@@ -17,11 +17,11 @@
 	<h2 id="top">Ambi - an RPN calculator and programming language</h2>
 <p><small><em>Version 0.6 2011-11-16 License: GPL3 (C) 2009-2010 David R. Pratten</em>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://code.google.com/p/ambi/">Help</a></small></p>
 	<table id="io"><tr><td>
-	<h3>Type functions and expression ...</h3><form name="runform">
-<textarea id="source" name="source" rows="10"  >1 2 + .</textarea></td><td>
-<h3>Work in Progress (the stack)</h3><textarea id="stack" rows="10"></textarea></form>
-	</td><td>
-<h3>Results (use . or ..)</h3><textarea id="result" rows="10"></textarea></form>
+	<h3>Type Ambi functions and expression ...</h3><form name="runform">
+<textarea id="source" name="source" rows="5"  >1 2 + .</textarea></td></tr><tr><td>
+<h3>Working Results</h3><textarea id="stack" rows="5"></textarea></form>
+	</td></tr><tr><td>
+<h3>Printed Results (using . or ..)</h3><textarea id="result" rows="5"></textarea></form>
 	</td></tr>
 		</table>
 <h2>Variables</h2><p><small><em><a id="clearvars" href="">Clear variables</a></em></small></p><div id="vars"  >
