--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<meta name="viewport" content="width=320; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/> <!-- Mobile Safari -->
 	<script src="ambi.js" type="text/javascript"></script>
 	<script src="jquery-1.7.min.js" type="text/javascript"></script>
+	<script src="jstorage.js" type="text/javascript"></script>
 	<script src="ambi-interface.js" type="text/javascript"></script>
 	<link rel="stylesheet" type="text/css" href="ambi.css" />
 </head>
