--- a/index.html
+++ b/index.html
@@ -17,14 +17,102 @@
 <body>
 	<h2 id="top">Ambi - an RPN calculator and programming language</h2>
 <p><small><em>Version 0.6 2011-11-16 License: GPL3 (C) 2009-2011 David R. Pratten</em>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://code.google.com/p/ambi/">Help</a></small></p>
+	<table id="overview"><tr><td id="workingresults">
+<h3>Working Results</h3><textarea id="stack" rows="20"></textarea>
+	</td><td id="iocolumn">
 	<table id="io"><tr><td>
-	<h3>Type Ambi functions and expression ...</h3><form name="runform">
-<textarea id="source" name="source" rows="5"  >1 2 + .</textarea></td></tr><tr><td>
-<h3>Working Results</h3><textarea id="stack" rows="5"></textarea></form>
-	</td></tr><tr><td>
-<h3>Printed Results (using . or ..)</h3><textarea id="result" rows="5"></textarea></form>
+	<h3>Type Ambi functions and expression ...</h3>
+<textarea id="source" name="source" rows="5"  ></textarea>
+<p><small><a id="showkbd">Show Virtual Keyboard</a><a id="hidekbd">(Hide)</a></small></p>
+<div id="virtualkbd">
+<div>Keypad<br />
+		<a class="ambikbd" title="Keypad: 7">7</a>&nbsp;<a class="ambikbd" title="Keypad: 8">8</a>&nbsp;<a class="ambikbd" title="Keypad: 9">9</a>
+	<br />	<a class="ambikbd" title="Keypad: 4">4</a>
+		<a class="ambikbd" title="Keypad: 5">5</a>
+		<a class="ambikbd" title="Keypad: 6">6</a>
+	<br />	<a class="ambikbd" title="Keypad: 1">1</a>
+		<a class="ambikbd" title="Keypad: 2">2</a>
+		<a class="ambikbd" title="Keypad: 3">3</a>
+	<br />	<a class="ambikbd" title="Keypad: 0">0</a>
+	<a class="ambikbd" title="Keypad">.</a>
+	<a class="ambikbd" title="Keypad">Space</a>
+	
+</div><div>Mathematical functions<br />		<a class="ambikbd" title="Mathematical functions: minus">-</a>
+		<a class="ambikbd" title="Mathematical functions: mod">%</a>
+		<a class="ambikbd" title="Mathematical functions: times">*</a>
+		<a class="ambikbd" title="Mathematical functions: divide">/</a>
+		<a class="ambikbd" title="Mathematical functions: Unary minus">_</a>
+		<a class="ambikbd" title="Mathematical functions: plus">+</a>
+		<a class="ambikbd" title="Mathematical functions: absolute value">abs</a>
+		<a class="ambikbd" title="Mathematical functions: ceiling">ceiling</a>
+		<a class="ambikbd" title="Mathematical functions: floor">floor</a>
+		<a class="ambikbd" title="Mathematical functions: Natural logarithm">ln</a>
+		<a class="ambikbd" title="Mathematical functions: maximum of top two items">max</a>
+		<a class="ambikbd" title="Mathematical functions: minimum of top two items">min</a>
+		<a class="ambikbd" title="Mathematical functions: raise to power of 2">sq</a>
+		<a class="ambikbd" title="Mathematical functions: square root">sqrt</a>
+</div><div>Trigonometry functions<br />		
+		<a class="ambikbd" title="Trigonometry functions: sin">sin</a><a class="ambikbd" title="Trigonometry functions: asin">asin</a><br />
+		<a class="ambikbd" title="Trigonometry functions: cos">cos</a><a class="ambikbd" title="Trigonometry functions: acos">acos</a><br />
+		<a class="ambikbd" title="Trigonometry functions: tan">tan</a><a class="ambikbd" title="Trigonometry functions: atan">atan</a><br />
+</div><div>
+Aggregate functions<br />		<a class="ambikbd" title="Aggregate functions: multiply all">product</a>
+		<a class="ambikbd" title="Aggregate functions: sum all ">sum</a>
+		<a class="ambikbd" title="Aggregate functions: sum the square of all">sumsq</a>
+</div><div>Constants<br />
+		<a class="ambikbd" title="Constants: Appoximation of pi">pi</a>
+		<a class="ambikbd" title="Constants: Approximation of e">e</a>
+		<a class="ambikbd" title="Constants: 1">true</a>
+		<a class="ambikbd" title="Constants: 0">false</a>
+</div><div>Boolean Functions<br />
+		<a class="ambikbd" title="Boolean Functions: not">not</a>
+		<a class="ambikbd" title="Boolean Functions: not">!</a>
+		<a class="ambikbd" title="Boolean Functions: and">and</a>
+		<a class="ambikbd" title="Boolean Functions: and">&&</a>
+		<a class="ambikbd" title="Boolean Functions: or">or</a>
+		<a class="ambikbd" title="Boolean Functions: or">||</a><br />
+		<a class="ambikbd" title="Boolean Functions: equal to">eq</a>
+		<a class="ambikbd" title="Boolean Functions: equal to">==</a>
+		<a class="ambikbd" title="Boolean Functions: not equal to">neq</a>
+		<a class="ambikbd" title="Boolean Functions: not equal to">!=</a>
+		<a class="ambikbd" title="Boolean Functions: not equal to"><></a>
+		<a class="ambikbd" title="Boolean Functions: less than">lt</a>
+		<a class="ambikbd" title="Boolean Functions: less than"><</a>
+		<a class="ambikbd" title="Boolean Functions: less than or equal to">lte</a>
+		<a class="ambikbd" title="Boolean Functions: less than or equal to"><=</a>
+		<a class="ambikbd" title="Boolean Functions: greater than">gt</a>
+		<a class="ambikbd" title="Boolean Functions: greater than">></a>
+		<a class="ambikbd" title="Boolean Functions: greater than or equal to">gte</a>
+		<a class="ambikbd" title="Boolean Functions: greater than or equal to">>=</a>
+</div><div>Display<br />		<a class="ambikbd" title="Display: print top ">.</a>
+		<a class="ambikbd" title="Display: print all">..</a>
+		<a class="ambikbd" title="Display: print all">printall</a>
+		<a class="ambikbd" title="Display: print top ">printtop</a><br /><br />Assignment<br />
+		<a class="ambikbd" title="Assignment: assign">=</a>
+		<a class="ambikbd" title="Assignment: add 1 to variable">++</a>
+		<a class="ambikbd" title="Assignment: subtract 1 from variable">--</a>
+		<a class="ambikbd" title="Assignment: add and assign">+=</a>
+		<a class="ambikbd" title="Assignment: subtract and assign">-=</a>
+		<a class="ambikbd" title="Assignment: multiply and assign">*=</a>
+		<a class="ambikbd" title="Assignment: divide and assign">/=</a>
+</div><div>Working Results Manipulation<br />
+		<a class="ambikbd" title="Stack Manipulation: duplicate top item">dup</a>
+		<a class="ambikbd" title="Stack Manipulation: swap top and next to top items">swap</a><br />
+		<a class="ambikbd" title="Stack Manipulation: Export top local value to calling context">export</a>
+		<a class="ambikbd" title="Stack Manipulation: Import top value from calling context">import</a>
+</div><div>Program Structures<br />		
+        <a class="ambikbd" title="Program Structures: Bind NAME to the BODY expression">function ; NAME ; BODY</a><br />
+		<a class="ambikbd" title="Constants: 1">pass</a><br />
+		<a class="ambikbd" title="Program Structures: Do While"> dowhile ; INIT ; REPEAT ; TEST ; FINAL ; </a><br />
+		<a class="ambikbd" title="Program Structures: For"> for ; INIT ; TEST ; INCR ; REPEAT ; FINAL ;  </a><br />
+		<a class="ambikbd" title="Program Structures: If"> if ; INIT AND TEST ; IFTRUE ; FINAL ; </a><br />
+		<a class="ambikbd" title="Program Structures: If Else"> ifelse ; INIT AND TEST ; IFTRUE ; IFFALSE ; FINAL ;  </a><br />
+		<a class="ambikbd" title="Program Structures: While Do"> whiledo ; INIT ; TEST ; REPEAT ; FINAL ; </a>
+</div></div>
+</td></tr><tr><td>
+<h3>Printed Results (using . or ..)</h3><textarea id="result" rows="5"></textarea>
 	</td></tr>
-		</table>
+</table></td></tr></table>
 <h2>Variables</h2><p><small><em><a id="clearvars" href="">Clear variables</a></em></small></p><div id="vars"  >
 </body>
 </html>
