--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </script>
 <script src="jstorage.js" type="text/javascript">
 </script>
-<script src="ambi-interface.js" type="text/javascript">
+<script src="ambi-index.js" type="text/javascript">
 </script>
 <link rel="stylesheet" type="text/css" href="ambi.css" />
 </head>
