--- a/index.html
+++ b/index.html
@@ -43,44 +43,44 @@
 <textarea id="source" name="source" rows="5">
 </textarea>
 <p><small><em><a id="showkbd" href="" name="showkbd">Show Virtual Keyboard</a><a id="hidekbd" href="" name="hidekbd">Hide</a>&nbsp;&nbsp;&nbsp;<a id="clearvars" href="" name="clearvars">Clear variables</a>
-</em></small></p>
-<div id="virtualkbd">
-<div>Keypad<br />
+</em></small></p><div id="virtualkbd">
+<table><tr>
+<td width="20%">Keypad<br />
 <a class="ambikbd" title="Keypad: 7">7</a>&nbsp;<a class="ambikbd" title="Keypad: 8">8</a>&nbsp;<a class="ambikbd" title="Keypad: 9">9</a><br />
 <a class="ambikbd" title="Keypad: 4">4</a> <a class="ambikbd" title="Keypad: 5">5</a> <a class="ambikbd" title="Keypad: 6">6</a><br />
 <a class="ambikbd" title="Keypad: 1">1</a> <a class="ambikbd" title="Keypad: 2">2</a> <a class="ambikbd" title="Keypad: 3">3</a><br />
-<a class="ambikbd" title="Keypad: 0">0</a> <a class="ambikbd" title="Keypad">.</a> <a class="ambikbd" title="Keypad">Space</a></div>
-<div>Functions<br />
-<a class="ambikbd" title="Mathematical functions: minus">-</a> <a class="ambikbd" title="Mathematical functions: mod">%</a> <a class="ambikbd" title="Mathematical functions: times">*</a> <a class="ambikbd" title="Mathematical functions: divide">/</a> <a class="ambikbd" title="Mathematical functions: Unary minus">_</a> <a class="ambikbd" title="Mathematical functions: plus">+</a> <a class="ambikbd" title="Mathematical functions: absolute value">abs</a> <a class="ambikbd" title="Mathematical functions: ceiling">ceiling</a> <a class="ambikbd" title="Mathematical functions: floor">floor</a> <a class="ambikbd" title="Mathematical functions: 1/x">inv</a> <a class="ambikbd" title="Mathematical functions: Natural logarithm">ln</a> <a class="ambikbd" title="Mathematical functions: Raise to the power e">exp</a> <a class="ambikbd" title="Mathematical functions: maximum of top two items">max</a> <a class="ambikbd" title="Mathematical functions: minimum of top two items">min</a> <a class="ambikbd" title="Mathematical functions: raise to power of 2">sq</a> <a class="ambikbd" title="Mathematical functions: raise to arbitary power">pow</a> <a class="ambikbd" title="Mathematical functions: square root">sqrt</a></div>
-<div>Trigonometry<br />
+<a class="ambikbd" title="Keypad: 0">0</a> <a class="ambikbd" title="Keypad">.</a> <a class="ambikbd" title="Keypad">Space</a></td>
+<td width="40%">Functions<br />
+<a class="ambikbd" title="Mathematical functions: minus">-</a> <a class="ambikbd" title="Mathematical functions: mod">%</a> <a class="ambikbd" title="Mathematical functions: times">*</a> <a class="ambikbd" title="Mathematical functions: tdide">/</a> <a class="ambikbd" title="Mathematical functions: Unary minus">_</a> <a class="ambikbd" title="Mathematical functions: plus">+</a> <a class="ambikbd" title="Mathematical functions: absolute value">abs</a> <a class="ambikbd" title="Mathematical functions: ceiling">ceiling</a> <a class="ambikbd" title="Mathematical functions: floor">floor</a> <a class="ambikbd" title="Mathematical functions: 1/x">inv</a> <a class="ambikbd" title="Mathematical functions: Natural logarithm">ln</a> <a class="ambikbd" title="Mathematical functions: Raise to the power e">exp</a> <a class="ambikbd" title="Mathematical functions: maximum of top two items">max</a> <a class="ambikbd" title="Mathematical functions: minimum of top two items">min</a> <a class="ambikbd" title="Mathematical functions: raise to power of 2">sq</a> <a class="ambikbd" title="Mathematical functions: raise to arbitary power">pow</a> <a class="ambikbd" title="Mathematical functions: square root">sqrt</a></td>
+<td width="20%">Trigonometry<br />
 <a class="ambikbd" title="Trigonometry functions: sin">sin</a><a class="ambikbd" title="Trigonometry functions: asin">asin</a><br />
 <a class="ambikbd" title="Trigonometry functions: cos">cos</a><a class="ambikbd" title="Trigonometry functions: acos">acos</a><br />
-<a class="ambikbd" title="Trigonometry functions: tan">tan</a><a class="ambikbd" title="Trigonometry functions: atan">atan</a><br /></div>
-<div>Aggregate<br />
-<a class="ambikbd" title="Aggregate functions: multiply all">product</a> <a class="ambikbd" title="Aggregate functions: sum all ">sum</a> <a class="ambikbd" title="Aggregate functions: sum the square of all">sumsq</a></div>
-<div>Constants<br />
-<a class="ambikbd" title="Constants: Appoximation of pi">pi</a> <a class="ambikbd" title="Constants: Approximation of e">e</a> <a class="ambikbd" title="Constants: 1">true</a> <a class="ambikbd" title="Constants: 0">false</a></div>
-<div>Boolean<br />
+<a class="ambikbd" title="Trigonometry functions: tan">tan</a><a class="ambikbd" title="Trigonometry functions: atan">atan</a><br /></td>
+<td width="20%">Aggregate<br />
+<a class="ambikbd" title="Aggregate functions: multiply all">product</a> <a class="ambikbd" title="Aggregate functions: sum all ">sum</a> <a class="ambikbd" title="Aggregate functions: sum the square of all">sumsq</a></td></t><tr>
+<td>Constants<br />
+<a class="ambikbd" title="Constants: Appoximation of pi">pi</a> <a class="ambikbd" title="Constants: Approximation of e">e</a> <a class="ambikbd" title="Constants: 1">true</a> <a class="ambikbd" title="Constants: 0">false</a></td>
+<td>Boolean<br />
 <a class="ambikbd" title="Boolean Functions: not">not</a> <a class="ambikbd" title="Boolean Functions: not">!</a> <a class="ambikbd" title="Boolean Functions: and">and</a> <a class="ambikbd" title="Boolean Functions: and">&#38&#38</a> <a class="ambikbd" title="Boolean Functions: or">or</a> <a class="ambikbd" title="Boolean Functions: or">||</a><br />
-<a class="ambikbd" title="Boolean Functions: equal to">eq</a> <a class="ambikbd" title="Boolean Functions: equal to">==</a> <a class="ambikbd" title="Boolean Functions: not equal to">neq</a> <a class="ambikbd" title="Boolean Functions: not equal to">!=</a> <a class="ambikbd" title="Boolean Functions: not equal to">&lt;&gt;</a> <a class="ambikbd" title="Boolean Functions: less than">lt</a> <a class="ambikbd" title="Boolean Functions: less than">&lt;</a> <a class="ambikbd" title="Boolean Functions: less than or equal to">lte</a> <a class="ambikbd" title="Boolean Functions: less than or equal to">&lt;=</a> <a class="ambikbd" title="Boolean Functions: greater than">gt</a> <a class="ambikbd" title="Boolean Functions: greater than">&gt;</a> <a class="ambikbd" title="Boolean Functions: greater than or equal to">gte</a> <a class="ambikbd" title="Boolean Functions: greater than or equal to">&gt;=</a></div>
-<div>Print<br />
+<a class="ambikbd" title="Boolean Functions: equal to">eq</a> <a class="ambikbd" title="Boolean Functions: equal to">==</a> <a class="ambikbd" title="Boolean Functions: not equal to">neq</a> <a class="ambikbd" title="Boolean Functions: not equal to">!=</a> <a class="ambikbd" title="Boolean Functions: not equal to">&lt;&gt;</a> <a class="ambikbd" title="Boolean Functions: less than">lt</a> <a class="ambikbd" title="Boolean Functions: less than">&lt;</a> <a class="ambikbd" title="Boolean Functions: less than or equal to">lte</a> <a class="ambikbd" title="Boolean Functions: less than or equal to">&lt;=</a> <a class="ambikbd" title="Boolean Functions: greater than">gt</a> <a class="ambikbd" title="Boolean Functions: greater than">&gt;</a> <a class="ambikbd" title="Boolean Functions: greater than or equal to">gte</a> <a class="ambikbd" title="Boolean Functions: greater than or equal to">&gt;=</a></td>
+<td>Print<br />
 <a class="ambikbd" title="Display: print top ">printtop</a> <a class="ambikbd" title="Display: print top ">.</a>  <a class="ambikbd" title="Display: print all">printall</a> <a class="ambikbd" title="Display: print all">..</a><br />
-<br />
+</td><td>
 Assignment<br />
-<a class="ambikbd" title="Assignment: assign">=</a> <a class="ambikbd" title="Assignment: add 1 to variable">++</a> <a class="ambikbd" title="Assignment: subtract 1 from variable">--</a> <a class="ambikbd" title="Assignment: add and assign">+=</a> <a class="ambikbd" title="Assignment: subtract and assign">-=</a> <a class="ambikbd" title="Assignment: multiply and assign">*=</a> <a class="ambikbd" title="Assignment: divide and assign">/=</a></div>
-<div>Working Results Manipulation<br />
+<a class="ambikbd" title="Assignment: assign">=</a> <a class="ambikbd" title="Assignment: add 1 to variable">++</a> <a class="ambikbd" title="Assignment: subtract 1 from variable">--</a> <a class="ambikbd" title="Assignment: add and assign">+=</a> <a class="ambikbd" title="Assignment: subtract and assign">-=</a> <a class="ambikbd" title="Assignment: multiply and assign">*=</a> <a class="ambikbd" title="Assignment: tdide and assign">/=</a></td></tr><tr>
+<td>Working Results<br />
 <a class="ambikbd" title="Stack Manipulation: duplicate top item">dup</a> <a class="ambikbd" title="Stack Manipulation: swap top and next to top items">swap</a> <a class="ambikbd" title="Stack Manipulation: drop top item">drop</a><br />
-<a class="ambikbd" title="Stack Manipulation: Export top local value to calling context">export</a> <a class="ambikbd" title="Stack Manipulation: Import top value from calling context">import</a></div>
-<div>Program Structures<br />
-<a class="ambikbd" title="Program Structures: Bind NAME to the BODY expression">function ; NAME ; BODY ;</a><br />
-<a class="ambikbd" title="Comment">//</a><br />
+<a class="ambikbd" title="Stack Manipulation: Export top local value to calling context">export</a> <a class="ambikbd" title="Stack Manipulation: Import top value from calling context">import</a></td>
+<td colspan="3" id="progstruct">Program Structures<br /><small>
+<a class="ambikbd" title="Program Structures: Bind NAME to the BODY expression">function ; NAME ; BODY ;</a> 
+<a class="ambikbd" title="Comment">//</a> 
 <a class="ambikbd" title="Constants: 1">pass</a><br />
-<a class="ambikbd" title="Program Structures: Do While">dowhile ; INIT ; REPEAT ; TEST ; FINAL ;</a><br />
+<a class="ambikbd" title="Program Structures: Do While">dowhile ; INIT ; REPEAT ; TEST ; FINAL ;</a> 
 <a class="ambikbd" title="Program Structures: For">for ; INIT ; TEST ; INCR ; REPEAT ; FINAL ;</a><br />
-<a class="ambikbd" title="Program Structures: If">if ; INIT AND TEST ; IFTRUE ; FINAL ;</a><br />
+<a class="ambikbd" title="Program Structures: If">if ; INIT AND TEST ; IFTRUE ; FINAL ;</a> 
 <a class="ambikbd" title="Program Structures: If Else">ifelse ; INIT AND TEST ; IFTRUE ; IFFALSE ; FINAL ;</a><br />
-<a class="ambikbd" title="Program Structures: While Do">whiledo ; INIT ; TEST ; REPEAT ; FINAL ;</a></div>
-</div>
+<a class="ambikbd" title="Program Structures: While Do">whiledo ; INIT ; TEST ; REPEAT ; FINAL ;</a></small></td></tr>
+</table></div>
 <h3>My Ambi Functions</h3>
 <textarea id="functions" name="functions" rows="10">
 </textarea>
