--- a/index.html
+++ b/index.html
@@ -22,15 +22,12 @@
 </head>
 <body>
 <table id="overview">
+<tr><td colspan="2"><h3>Ambi - an RPN calculator and programming language</h3></td></tr>
 <tr>
-<td id="workingresults">
-<h3>Results</h3>
-<textarea id="stack" rows="30">
-</textarea>
-</td>
+
 <td id="iocolumn">
-<h3>Ambi - an RPN calculator and programming language</h3>
-<p><small><em>Type your functions and/or expression here. <a id="clear" href="">Clear</a> Lessons: <a class="eg" href="">#1</a>
+
+<p><small><em><a id="clear" href="" title="Clear calculation, preserve variables and functions."><img src="cancel.png" /></a> Type your functions and/or expression here.  Examples: <a class="eg" href="">#1</a>
  <a class="eg" href="">#2</a> 
  <a class="eg" href="">#3</a>
  <a class="eg" href="">#4</a>
@@ -42,7 +39,7 @@
  </em></small></p>
 <textarea id="source" name="source" rows="5">
 </textarea>
-<p><small><em><a id="showkbd" href="" name="showkbd">Show Virtual Keyboard</a><a id="hidekbd" href="" name="hidekbd">Hide</a>&nbsp;&nbsp;&nbsp;<a id="clearvars" href="" name="clearvars">Clear variables</a>
+<p><small><em><a id="hidekbd" href="" name="hidekbd" title="Hide Virtual Keyboard"><img  style="height:16px;"  src="keyboard_remove.png" /></a>
 </em></small></p><div id="virtualkbd">
 <table><tr>
 <td width="20%">Keypad<br />
@@ -81,11 +78,15 @@ Assignment<br />
 <a class="ambikbd" title="Program Structures: If Else">ifelse ; INIT AND TEST ; IFTRUE ; IFFALSE ; FINAL ;</a><br />
 <a class="ambikbd" title="Program Structures: While Do">whiledo ; INIT ; TEST ; REPEAT ; FINAL ;</a></small></td></tr>
 </table></div>
-<h3>My Ambi Functions</h3>
+<p><small><a id="showkbd" href="" name="showkbd" title="Show Virtual Keyboard"><img src="keyboard_add.png" /></a> <em>My Ambi Functions</em></small></p>
 <textarea id="functions" name="functions" rows="10">
 </textarea>
 <p><small><em>Version 0.6 2011-11-16 License: GPL3 (C) 2009-2011 David R. Pratten</em>&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://code.google.com/p/ambi/">About</a></small></p>
 
+</td><td id="workingresults">
+<p><small><em>Results</em></small>&nbsp;&nbsp;<a id="clearvars" href="" name="clearvars" title="Clear variables, preserve calculation and functions."><img src="clearvars.png" /></a></p>
+<textarea id="stack" rows="30">
+</textarea>
 </td>
 </tr>
 </table>
